# jump-consistent-hash

./: Cargo.toml
benches/: jumphash.rs
src/: lib.rs
tests/: hasher.rs  jumphash.rs  simulate.rs
